feat: Implement Card component and update HomePage layout

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -29,7 +29,7 @@
 .navLinks {
   .link {
     font-family: $font-family;
-    color: $input-text;
+    color: $heading-color;
     text-decoration: none;
     font-weight: 600;
     font-size: 1.6rem;
