--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,5 +9,11 @@
   max-width: 120rem;
   margin: 0 auto;
   padding: 4rem 2.4rem;
+
   flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding-bottom: 15rem; 
 }
