--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -6,3 +6,14 @@
   width: 100%;
   height: 100%;
 }
+
+.centered {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.centeredError {
+  font-size: 2rem;
+  font-weight: 500;
+  color: red;
+}
