--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,6 +10,7 @@
   box-shadow: 0 0.8rem 2.4rem rgba(34, 35, 68, 0.1);
   position: relative;
   overflow: hidden;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
