--- a/src/components/EmptyState/EmptyState.module.scss
+++ b/src/components/EmptyState/EmptyState.module.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@import '../../variables';
 
 .emptyStateContainer {
   display: flex;
@@ -6,10 +6,11 @@
   align-items: center;
   text-align: center;
   gap: 1.6rem;
+  padding: 4rem 2rem;
 }
 
 .illustration {
-  max-width: 30rem;
+  max-width: 300px;
   height: auto;
   margin-bottom: 2rem;
 }
@@ -24,4 +25,14 @@
   font-size: 1.6rem;
   color: $input-text;
   line-height: 1.6;
+}
+
+.link {
+  color: $primary-link;
+  font-weight: 600;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
