--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -19,6 +19,13 @@
     height: 0.6rem;
     background: linear-gradient(90deg, $nesto-light-blue, $nesto-dark-yellow);
   }
+
+  .errorText {
+    color: $nesto-red;
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin-top: 0.8rem;
+  }
 }
 
 h2 {
@@ -79,8 +86,16 @@ h2 {
     }
 
     &:disabled {
-      opacity: 0.6;
+      opacity: 0.5;
       cursor: not-allowed;
+      background-color: #ccc;
+      border-color: #ccc;
+      color: #666;
+
+      &:hover {
+        background-color: #ccc;
+        color: #666;
+      }
     }
   }
 }
