--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@use '../../variables' as var;
 
 .formContainer {
   background-color: #ffffff;
@@ -17,11 +17,11 @@
     left: 0;
     width: 100%;
     height: 0.6rem;
-    background: linear-gradient(90deg, $nesto-light-blue, $nesto-dark-yellow);
+    background: linear-gradient(90deg, var.$nesto-light-blue, var.$nesto-dark-yellow);
   }
 
   .errorText {
-    color: $nesto-red;
+    color: var.$nesto-red;
     font-size: 1.4rem;
     font-weight: 600;
     margin-top: 0.8rem;
@@ -31,7 +31,7 @@
 h2 {
   font-size: 1.8rem;
   font-weight: 600;
-  color: $dark-blue-background;
+  color: var.$dark-blue-background;
   margin-top: 0;
   margin-bottom: 2.4rem;
 }
@@ -44,7 +44,7 @@ h2 {
   label {
     font-size: 1.4rem;
     font-weight: 600;
-    color: $input-text;
+    color: var.$input-text;
     margin-bottom: 0.8rem;
   }
 
@@ -57,8 +57,8 @@ h2 {
 
     &:focus {
       outline: none;
-      border-color: $primary-link;
-      box-shadow: 0 0 0 3px rgba($primary-link, 0.2);
+      border-color: var.$primary-link;
+      box-shadow: 0 0 0 3px rgba(var.$primary-link, 0.2);
     }
   }
 }
@@ -71,17 +71,17 @@ h2 {
 
   button {
     padding: 1.2rem 2.4rem;
-    border: 1px solid $primary-link;
+    border: 1px solid var.$primary-link;
     border-radius: 5rem;
     background-color: transparent;
-    color: $primary-link;
+    color: var.$primary-link;
     font-size: 1.6rem;
     font-weight: 700;
     cursor: pointer;
     transition: background-color 0.2s ease, color 0.2s ease;
 
     &:hover {
-      background-color: $primary-link;
+      background-color: var.$primary-link;
       color: #ffffff;
     }
 
