--- a/src/components/EmptyState/EmptyState.module.scss
+++ b/src/components/EmptyState/EmptyState.module.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@use '../../variables' as var;
 
 .emptyStateContainer {
   display: flex;
@@ -17,18 +17,18 @@
 
 .title {
   font-size: 2.4rem;
-  color: $dark-blue-background;
+  color: var.$dark-blue-background;
   font-weight: 700;
 }
 
 .text {
   font-size: 1.6rem;
-  color: $input-text;
+  color: var.$input-text;
   line-height: 1.6;
 }
 
 .link {
-  color: $primary-link;
+  color: var.$primary-link;
   font-weight: 600;
   text-decoration: none;
 
