--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@use './variables' as var;
 
 html {
   font-size: 62.5%;
@@ -13,11 +13,11 @@ html {
 }
 
 body {
-  font-family: $font-family;
-  color: $input-text;
+  font-family: var.$font-family;
+  color: var.$input-text;
   line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: $heading-color;
+  color: var.$heading-color;
 }
