refactor: Update variable names in SCSS files for consistency and clarity

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,8 @@
-$nesto-red: #e91207;
-$nesto-dark-yellow: #ffcd05;
-$nesto-light-yellow: #fff2c0;
-$nesto-light-blue: #3d66b0;
-$nesto-dark-blue: #3d66b0;
+$red: #e91207;
+$dark-yellow: #ffcd05;
+$light-yellow: #fff2c0;
+$light-blue: #3d66b0;
+$dark-blue: #3d66b0;
 $dark-blue-background: #222344;
 $button-text: #ffffff;
 $primary-link: #3c64af;
