--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -33,7 +33,7 @@
     left: 0;
     width: 100%;
     height: 0.6rem;
-    background: linear-gradient(90deg,var.$dark-blue-background, var.$nesto-light-blue, var.$nesto-red, var.$nesto-dark-yellow, var.$button-text);
+    background: linear-gradient(90deg,var.$dark-blue-background, var.$light-blue, var.$red, var.$dark-yellow, var.$button-text);
   }
 }
 
@@ -43,7 +43,7 @@
 
 .title {
   font-size: 2.2rem;
-  color: var.$nesto-light-blue;
+  color: var.$light-blue;
   font-weight: bold;
   margin: 0;
 }
@@ -86,7 +86,7 @@
 
   &:hover {
     transform: scale(1.03);
-    background-color: color.adjust(var.$nesto-red, $lightness: -8%);
+    background-color: color.adjust(var.$red, $lightness: -8%);
     color: var.$button-text;
   }
 }
