--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -17,11 +17,11 @@
     left: 0;
     width: 100%;
     height: 0.6rem;
-    background: linear-gradient(90deg, var.$nesto-light-blue, var.$nesto-dark-yellow);
+    background: linear-gradient(90deg, var.$light-blue, var.$dark-yellow);
   }
 
   .errorText {
-    color: var.$nesto-red;
+    color: var.$red;
     font-size: 1.4rem;
     font-weight: 600;
     margin-top: 0.8rem;
