--- a/src/pages/ApplicationsListPage.module.scss
+++ b/src/pages/ApplicationsListPage.module.scss
@@ -31,7 +31,7 @@
   th {
     font-weight: 600;
     color: var.$input-text;
-    background-color: rgba(var.$nesto-dark-yellow , 0.5);
+    background-color: rgba(var.$dark-yellow , 0.5);
   }
 
   td {
