--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -47,3 +47,31 @@
     }
   }
 }
+
+.languageSwitcher {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+
+  button {
+    font-size: 2.4rem;
+    background: none;
+    border: none;
+    padding: 0;
+    transition: opacity 0.2s ease, transform 0.2s ease;
+
+    opacity: 0.5;
+    cursor: pointer;
+
+    &.active {
+      opacity: 1;
+      cursor: default;
+      transform: none;
+    }
+
+    &:not(.active):hover {
+      opacity: 1;
+      transform: scale(1.1);
+    }
+  }
+}
