--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@ body {
   font-family: var.$font-family;
   color: var.$input-text;
   line-height: 1.5;
+  background-color: #f7f8fc;
 }
 
 h1, h2, h3, h4, h5, h6 {
